--- a/about-us.html
+++ b/about-us.html
@@ -19,6 +19,8 @@
         href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3'
         type='text/css' media='all' />
 
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body
@@ -743,7 +745,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/about/about us -01.png" alt="" class="cheif-img">
+                                                <img data-aos="fade-right" data-aos-duration="500" data-aos-delay="200" src="img/about/about us -01.png" alt="" class="cheif-img">
                                             </div>
                                         </div>
                                     </div>
@@ -755,7 +757,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_4">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " data-aos="fade-left" data-aos-duration="500" data-aos-delay="200"
                                                             id="h3_983a_0">Dr. Wafa AlRushaid</h3>
                                                     </div>
                                                 </div>
@@ -764,7 +766,7 @@
                                                 <div
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align">
                                                     <div class="gdlr-core-divider-container" id="div_983a_5">
-                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider"
+                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" data-aos="fade-left" data-aos-duration="500" data-aos-delay="200"
                                                             id="div_983a_6"></div>
                                                     </div>
                                                 </div>
@@ -772,8 +774,8 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_8">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_8" data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " 
                                                             id="h3_983a_22">Cheif Executive Officer</h3>
                                                         <p class="p-about">PhD Holder from The American Graduate School
                                                             of
@@ -817,7 +819,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr centerdiv"
                                                     id="div_983a_19">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" data-aos="fade-down" data-aos-duration="500" 
                                                             id="h3_983a_3">OUR MISSION</h3>
                                                     </div>
                                                 </div>
@@ -826,7 +828,7 @@
                                                 <div
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb">
                                                     <div class="gdlr-core-text-box-item-content" id="div_983a_20">
-                                                        <p class="p-about2" style="font-size: 1.2rem;">Our main mission
+                                                        <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="200" class="p-about2" style="font-size: 1.2rem;">Our main mission
                                                             is to help students,
                                                             give them a sense of confidence and
                                                             improve their skills by providing modern methods and
@@ -867,7 +869,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " data-aos="fade-right" data-aos-duration="500" 
                                                             id="h3_983a_4">Our Vision</h3>
                                                     </div>
                                                 </div>
@@ -876,7 +878,7 @@
                                                 <div
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <div class="gdlr-core-text-box-item-content" id="div_983a_27">
-                                                        <p class="p-about">We are committed to fostering our students'
+                                                        <p data-aos="fade-right" data-aos-duration="500"  class="p-about">We are committed to fostering our students'
                                                             love
                                                             for learning, encouraging them to try new things,
                                                             and giving them a solid foundation to build a bright
@@ -893,7 +895,7 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  gdlr-core-column-extend-right"
                                         style="height: 480px;">
-                                        <div class="gdlr-core-pbf-background-wrap">
+                                        <div class="gdlr-core-pbf-background-wrap" data-aos="fade-left" data-aos-duration="800" >
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                                                 id="div_983a_28"></div>
                                         </div>
@@ -913,7 +915,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/about/about us -03.png" alt="" class="vision-img">
+                                                <img src="img/about/about us -03.png" alt="" class="vision-img" data-aos="fade-right" data-aos-duration="800" >
                                             </div>
                                         </div>
                                     </div>
@@ -925,7 +927,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " data-aos="fade-left" data-aos-duration="500" 
                                                             id="h3_983a_4">Our Values </h3>
                                                     </div>
                                                 </div>
@@ -933,7 +935,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_27">
+                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_27" data-aos="fade-left" data-aos-duration="500" >
                                                         <p class="p-about" style="color: white;">We work to provide
                                                             skilled professionals,
                                                             which ensures
@@ -965,7 +967,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " data-aos="fade-right" data-aos-duration="500" 
                                                             id="h3_983a_4">Our Objectives</h3>
                                                     </div>
                                                 </div>
@@ -973,7 +975,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                    <div class="gdlr-core-text-box-item-content" id="div_983a_27">
+                                                    <div data-aos="fade-right" data-aos-duration="500"  class="gdlr-core-text-box-item-content" id="div_983a_27">
                                                         <p class="p-about">We strive to make
                                                             Raffles a major pioneer in design education in the Kingdom
                                                             of Saudi Arabia, as we always strive to expand our fields of
@@ -991,7 +993,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/about/about us -04b.png" alt="" class="objective-img">
+                                                <img src="img/about/about us -04b.png" alt="" class="objective-img" data-aos="fade-left" data-aos-duration="800" >
                                             </div>
                                         </div>
                                     </div>
@@ -1023,7 +1025,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_19">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix centerdiv">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" data-aos="fade-down" data-aos-duration="500" data-aos-delay="200"
                                                             id="h3_983a_3b">Raffles Sense</h3>
                                                     </div>
                                                 </div>
@@ -1033,7 +1035,7 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div
                                                         class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                        <div class="gdlr-core-text-box-item-content" id="div_983a_20">
+                                                        <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="200" class="gdlr-core-text-box-item-content" id="div_983a_20">
                                                             <p>We are committed to providing a
                                                                 conducive learning environment
                                                                 which will evoke in our students the
@@ -1055,7 +1057,7 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div
                                                         class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                        <div class="gdlr-core-text-box-item-content" id="div_983a_20">
+                                                        <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="400"  class="gdlr-core-text-box-item-content" id="div_983a_20">
                                                             <p>We strive to unlock our students’
                                                                 minds, enabling them to overcome
                                                                 the barriers that limit them.
@@ -1073,7 +1075,7 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div
                                                         class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                        <div class="gdlr-core-text-box-item-content" id="div_983a_20">
+                                                        <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="600"  class="gdlr-core-text-box-item-content" id="div_983a_20">
                                                             <p>By awakening the Raffles Sense in our
                                                                 students, we ignite their creativity
                                                                 and innovation to empower them
@@ -1100,7 +1102,7 @@
 
             <!-- whatsapp icon -->
             <div>
-                <a href="https://wa.me/" class="float" target="_blank">
+                <a href="https://wa.me/0552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
@@ -1209,7 +1211,12 @@
         </div>
     </div>
 
-
+    <!-- animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+    
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
     <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
     <script type='text/javascript' src='plugins/goodlayers-core/plugins/combine/script.js'></script>
