--- a/programs.html
+++ b/programs.html
@@ -19,6 +19,8 @@
         href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3'
         type='text/css' media='all' />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body
@@ -274,11 +276,11 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a href="mailto:Info@raffles-me.com">Info@raffles-me.com</a>  <i
-                                class="fa fa-phone"
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
+                                href="mailto:Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
                             <a href="tel:+966 11 281 5126">+966 11 281 5126</a>
-                                </div>
+                        </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <!-- <ul id="kingster-top-bar-menu"
                                         class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -291,8 +293,8 @@
                             <a class="kingster-top-bar-right-button active-btn" href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img
-                                            src="img/sa-flag.png" width="35" alt=""></a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
+                                            width="35" alt=""></a></li>
                             </ul>
                         </div>
                     </div>
@@ -512,7 +514,8 @@
                                                     List 2</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item kingster-normal-menu"><a href="scholarships.html">Scholarships</a>
+                                    <li class="menu-item kingster-normal-menu"><a
+                                            href="scholarships.html">Scholarships</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu"><a href="admission.html">Admission
                                         </a></li>
@@ -570,21 +573,21 @@
                             <div class="gdlr-core-blog-item gdlr-core-item-pdb clearfix  gdlr-core-style-blog-image"
                                 style="padding-bottom: 40px ;">
                                 <div class="gdlr-core-blog-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" 
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
                                                     <a href="foundation-studies.html">
-                                                    <img src="img/Programs/Foundation-Studies.png" width="700"
-                                                        height="660" alt="" /></a>
-                                                    </div>
+                                                        <img src="img/Programs/Foundation-Studies.png" width="700"
+                                                            height="660" alt="" /></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Foundation Studies</h5>
                                     </div>
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
@@ -598,7 +601,7 @@
                                         </div>
                                         <h5 class="programmes-h5">Visual Communication</h5>
                                     </div>
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
@@ -612,7 +615,7 @@
                                         </div>
                                         <h5 class="programmes-h5">Fashion Marketing & Management Design</h5>
                                     </div>
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" 
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
@@ -626,7 +629,7 @@
                                         </div>
                                         <h5 class="programmes-h5">Interior Design</h5>
                                     </div>
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
@@ -640,7 +643,7 @@
                                         </div>
                                         <h5 class="programmes-h5">Jewelery Design</h5>
                                     </div>
-                                    <div
+                                    <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
@@ -664,7 +667,7 @@
         </div>
 
         <div>
-            <a href="https://wa.me/" class="float" target="_blank">
+            <a href="https://wa.me/0552995509/" class="float" target="_blank">
                 <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
             </a>
         </div>
@@ -773,6 +776,12 @@
     </div>
     </div>
 
+
+    <!-- animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
     <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
