--- a/admission.html
+++ b/admission.html
@@ -1008,7 +1008,7 @@
 
 
         <div>
-            <a href="https://wa.me/" class="float" target="_blank">
+            <a href="https://wa.me/0552995509/" class="float" target="_blank">
                 <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
             </a>
         </div>
