--- a/contact.html
+++ b/contact.html
@@ -594,7 +594,7 @@
 
                                                             <div class="quform-elements">
                                                                 <div class="quform-element">
-                                                                    <p class="labels">Your Name (required)
+                                                                    <p class="labels">Name (required)
                                                                         <br>
                                                                         <span class="wpcf7-form-control-wrap your-name">
                                                                             <input id="name" type="text" name="name" size="40" class="input1" aria-required="true" aria-invalid="false" required>
@@ -602,7 +602,7 @@
                                                                     </p>
                                                                 </div>
                                                                 <div class="quform-element">
-                                                                    <p class="labels">Your Email (required)
+                                                                    <p class="labels">Email (required)
                                                                         <br>
                                                                         <span class="wpcf7-form-control-wrap your-email">
                                                                             <input id="email" type="text" name="email" size="40" class="input1" aria-required="true" aria-invalid="false" required>
@@ -610,7 +610,7 @@
                                                                     </p>
                                                                 </div>
                                                                 <div class="quform-element">
-                                                                    <p class="labels">Your Message
+                                                                    <p class="labels">Message
                                                                         <br>
                                                                         <span class="wpcf7-form-control-wrap your-message">
                                                                             <textarea  id="message" name="message" cols="40" rows="10" class="input1" aria-invalid="false" ></textarea>
@@ -643,7 +643,7 @@
             </div>
 
             <div>
-                <a href="https://wa.me/" class="float" target="_blank">
+                <a href="https://wa.me/0552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
