--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                                                         <div class="gdlr-core-column-service-title-wrap">
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title"
                                                                 style="text-transform: none ;">
-                                                                Visual Communication Design</h3>
+                                                                Visual Communication <br>Design</h3>
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="visual-communication.html">See
@@ -1271,7 +1271,7 @@
                                                     style="padding-bottom: 0px ;"><a
                                                         class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border "
                                                         href="admission.html" data-aos="fade-left" data-aos-duration="500" data-aos-delay="200"
-                                                        style="font-size: 17px ;color: #ffffff ;padding: 10px 30px 10px 30px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
+                                                        style="font-size: 15px ;color: #ffffff ;padding: 5px 20px 5px 20px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><span
                                                             class="gdlr-core-content txtmob1">Apply Now</span></a></div>
                                             </div>
                                         </div>
@@ -1875,7 +1875,7 @@
 
             <!-- whatsapp icon -->
             <div>
-                <a href="https://wa.me/" class="float" target="_blank">
+                <a href="https://wa.me/0552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
