--- a/services.html
+++ b/services.html
@@ -19,6 +19,8 @@
         href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3'
         type='text/css' media='all' />
 
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body
@@ -739,15 +741,14 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-event-item gdlr-core-item-pdb" style="padding-bottom: 25px ;">
                                         <div class="gdlr-core-event-item-holder clearfix">
-                                            <div
+                                            <div data-aos="fade-right" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/learning-study.jpg" width="900"
-                                                            height="500" alt="" /></a>
+                                                    <img src="img/foundation/learning-study.jpg" width="900"
+                                                            height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Focused Education</a></h3>
+                                                    <h3 class="gdlr-core-event-item-title titles-css"><a>Focused Education</a></h3>
                                                     <p class="font-css">
                                                         Raffles Design Institute is distinguished by the variety of
                                                         Focused specialized design fields of study, as it offers many
@@ -758,15 +759,14 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div
+                                            <div data-aos="fade-left" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/drawing.jpg" width="900"
-                                                            height="500" alt="" /></a>
+                                                    <img src="img/foundation/drawing.jpg" width="900"
+                                                            height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Flexible Conversion System</a></h3>
+                                                    <h3 class="gdlr-core-event-item-title titles-css"><a>Flexible Conversion System</a></h3>
                                                     <p class="font-css">
                                                         Raffles Design Institute has a flexible conversion system
                                                         that allows students to convert between universities and
@@ -775,30 +775,28 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div
+                                            <div data-aos="fade-right" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/art-history.jpg" width="900"
-                                                            height="500" alt="" /></a>
+                                                    <img src="img/foundation/art-history.jpg" width="900"
+                                                            height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Flexible Study System</a></h3>
+                                                    <h3 class="gdlr-core-event-item-title titles-css"><a>Flexible Study System</a></h3>
                                                     <p class="font-css">
                                                         Our innovative and stimulating programs promote work
                                                         during learning and learning during the job.
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div
+                                            <div data-aos="fade-left" data-aos-duration="500" 
                                                 class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-studies gdlr-core-column-first  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
-                                                    <a href="#"><img src="img/foundation/Mathematics.jpg" width="900"
-                                                            height="500" alt="" /></a>
+                                                  <img src="img/foundation/Mathematics.jpg" width="900"
+                                                            height="500" alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
-                                                            href="#">Scholarships
+                                                    <h3 class="gdlr-core-event-item-title titles-css"><a>Scholarships
                                                         </a></h3>
                                                     <p class="font-css">
                                                         Raffles Design Institute provides scholarships to
@@ -836,7 +834,7 @@
 
                <!-- whatsapp icon -->
                <div>
-                <a href="https://wa.me/" class="float" target="_blank">
+                <a href="https://wa.me/0552995509/" class="float" target="_blank">
                     <i class="fa fa-whatsapp my-float" style="margin-top: 15px;"></i>
                 </a>
             </div>
@@ -929,6 +927,12 @@
         </div>
     </div>
 
+
+    <!-- animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
     <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
